BIG UPDATE 3.0: Add sub & dub episode, change major pages

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  transition-duration: 0.3s;
+}
+
+body {
+  background-color: rgb(32, 32, 32);
+}
+
 .MuiPagination-root button {
   color: #fff;
   background-color: rgba(56, 195, 255, 0.521);
@@ -9,9 +17,6 @@
 }
 .MuiPagination-root button:hover {
   background-color: rgba(56, 191, 248, 0.884);
-}
-.muipagination-root button:target {
-  background-color: rgba(0, 0, 0, 0.492) !important;
 }
 .MuiPaginationItem-root {
   color: #fff !important;
